@@ -2246,7 +2246,16 @@ monitor.thread.count=JVM thread count
 monitor.thread.daemon_count=JVM daemon thread count
 monitor.thread.peak_count=JVM peak thread count
 monitor.thread.total_started=JVM total threads started
+
 monitor.mango.process.openFiles=Mango process open files
+monitor.mango.process.virtualSize=Mango process Virtual Memory Size
+monitor.mango.process.bytesWritten=Mango process bytes written
+monitor.mango.process.bytesRead=Mango process bytes read
+monitor.mango.process.majorFaults=Mango process major (hard) faults
+monitor.mango.process.minorFaults=Mango process minor (soft) faults
+monitor.mango.process.kernelTime=Mango process kernel cpu time
+monitor.mango.process.userTime=Mango process user cpu time
+monitor.mango.process.residentSetSize=Mango process resident set size (RSS)
 
 module.notLicensed=This module is running in free mode. Click ''Update your license now'' to get a license.
 module.licenseExpired=This operating time has expired. Please license this module.
